force-app/main/default/objects/Case/fields/Reactions__c.field-meta.xml
<CustomField>
    <fullName>Reactions__c</fullName>
    <label>Reactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Not Satisfactory</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>