force-app/main/default/objects/Case/fields/Robotic_Car__c.field-meta.xml
<CustomField>
    <fullName>Robotic_Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Robotic Car</label>
    <referenceTo>Robotic_Car__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>