force-app/main/default/objects/Case/fields/Robotic_Car_Order__c.field-meta.xml
<CustomField>
    <fullName>Robotic_Car_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Robotic Car Order</label>
    <referenceTo>Robotic_Car_Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>